--- a/ss7_spring_data_repository/exercise/Blog Levelup/src/main/resources/templates/list.html
+++ b/ss7_spring_data_repository/exercise/Blog Levelup/src/main/resources/templates/list.html
@@ -3,20 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    <link rel="stylesheet" href="/https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
           integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <style>
-        .myheader {
-            height: 10vh !important;
-        }
-        .content {
-            height: 80vh !important;
-            margin-top: 14px !important;
-        }
-        .footer {
-            height: 6vh !important;
-        }
-    </style>
 </head>
 <body>
 <div>
