--- a/ss9_aop/exercise/src/main/resources/templates/home.html
+++ b/ss9_aop/exercise/src/main/resources/templates/home.html
@@ -1,10 +1,76 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
+    <link rel="stylesheet" href="/https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+          integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 </head>
 <body>
-$END$
+<div>
+    <h2>LIBRARY</h2>
+</div>
+<h3 th:text="${mess}"></h3>
+
+<form action="/search" method="post">
+    <input type="text" name="id" >
+    <input type="submit" value="Trả sách">
+</form>
+
+<h3 th:text="${danger}"></h3>
+<table id="book" class="table table-light table-striped" border="1">
+    <tr>
+        <th>ID Book</th>
+        <th>Tên sách</th>
+        <th>Tác giả </th>
+        <th>Thể loại</th>
+        <th>Ngày ra mắt</th>
+        <th>Số lượng</th>
+        <th></th>
+    </tr>
+
+    <tr th:each="book, rowStat : ${listBook}">
+        <td th:text="${book.idBook}"></td>
+        <td th:text="${book.nameBook}"></td>
+        <td th:text="${book.author}"></td>
+        <td th:text="${book.category}"></td>
+        <td th:text="${book.meetingDate}"></td>
+        <td th:text="${book.amount}"></td>
+        <td><a th:href="@{/view/__${book.idBook}__}">Mượn</a></td>
+
+    </tr>
+
+</table>
+<!--<div>-->
+<!--    <span>-->
+<!--        <a th:if = "${listBlog.hasPrevious()}" th:href="@{/(page = ${listBlog.number - 1})}">Previous</a>-->
+<!--    </span>-->
+<!--    <span th:each="pageNo: ${#numbers.sequence(0,listBlog.totalPages - 1)}">-->
+<!--        <a th:href="@{/(page = ${pageNo})}" th:text="${pageNo}"></a>-->
+<!--    </span>-->
+<!--    <span>-->
+<!--        <a th:if = "${listBlog.hasNext()}" th:href="@{/(page = ${listBlog.number +1})}">Next</a>-->
+<!--    </span>-->
+<!--</div>-->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+        integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
+        crossorigin="anonymous"></script>
+<script src="../datatables/js/jquery.dataTables.min.js"></script>
+<script src="../datatables/js/dataTables.bootstrap4.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $('#product').dataTable({
+            "dom": "lrtip",
+            "lengthChange": false,
+            "pageLength": 2
+        });
+    });
+</script>
 </body>
 </html>
