--- a/ss5_database_orm/exercise/Manager Product/src/main/webapp/WEB-INF/views/edit.html
+++ b/ss5_database_orm/exercise/Manager Product/src/main/webapp/WEB-INF/views/edit.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Sản Phẩm</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 </head>
 <body>
-$END$
+<div>
+    <div >
+        <div > Chỉnh sửa sản phẩm</div>
+        <form th:object="${product}" action="/edit" method="post" >
+
+            <div class="form-group">
+                <label>Nhập ID sản phẩm</label>
+                <input th:field="*{idProduct}"  hidden>
+            </div>
+
+            <div class="form-group">
+                <label>Nhập tên sản phẩm</label>
+                <input th:field="*{name}" >
+            </div>
+
+            <div class="form-group">
+                <label>Nhập giá sản phẩm</label>
+                <input th:field="*{price}">
+            </div>
+
+            <div class="form-group">
+                <label>Mô tả</label>
+                <input th:field="*{status}">
+            </div>
+
+            <div class="form-group">
+                <label>Nhà sản xuất</label>
+                <input th:field="*{producer}">
+            </div>
+            <button type="submit">Edit</button>
+        </form>
+    </div>
+</div>
 </body>
 </html>
