--- a/case_study/src/main/resources/templates/header.html
+++ b/case_study/src/main/resources/templates/header.html
@@ -3,37 +3,41 @@
 <head>
     <link rel="stylesheet" href="/resources/css/css-header.css">
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
-    <title>Furama Resort DaNang City</title>
+    <title>FuramaZ Resort DaNang City</title>
+    <link rel="icon" th:href="@{https://cdn140.picsart.com/334733793098211.png?to=crop&type=webp&r=1456x1456&q=85}">
 </head>
 <body>
-<div class="row w-100 container-fluid m-0 p-0"  >
-    <nav class="navbar navbar-expand-lg navbar-light bg-success w-100 " >
+<div class="row w-100 container-fluid m-0 p-0">
+    <nav class="navbar navbar-expand-lg navbar-light bg-success w-100 ">
         <div class="col-md-2">
-            <img src="https://furamavietnam.com/wp-content/uploads/2018/08/logo.png " style="width: 100px;height: 150px">
+            <img src="https://furamavietnam.com/wp-content/uploads/2018/08/logo.png "
+                 style="width: 100px;height: 150px">
         </div>
 
-        <div class="collapse navbar-collapse col-md-8 " style="align-items: center;justify-content: space-around"  >
+        <div class="collapse navbar-collapse col-md-8 " style="align-items: center;justify-content: space-around">
             <a class="navbar-brand" style="height: 43px" href="#">Home</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" style="margin-left: 36px"  >
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                    style="margin-left: 36px">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <ul class="navbar-nav mr-auto" id="navbarSupportedContent">
-                <li class="nav-item">
-
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Customer
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item"th:href="@{/customer}">Display</a>
-                    <div class="dropdown-divider"></div>
-                </div>
-                </li>
-
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Service
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Customer
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" th:href="@{/templates/customer}">Display</a>
+                        <div class="dropdown-divider"></div>
+                    </div>
+                </li>
+                
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Employee
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
                         <a class="dropdown-item" href="#">Action</a>
                         <a class="dropdown-item" href="#">Another action</a>
                         <div class="dropdown-divider"></div>
@@ -45,7 +49,8 @@
                 </li>
                 <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="color: #1d2124">Search</button>
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="color: #1d2124">Search
+                    </button>
                 </form>
             </ul>
         </div>
@@ -58,12 +63,14 @@
     </nav>
 </div>
 
-
-
-
-
 </body>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </html>
